--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 
 ## Intermediate documents:
 *.dvi
+print.pdf
+presentation.pdf
 *-converted-to.*
 # these rules might exclude image files for figures etc.
 # *.ps
