--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *.dvi
 print.pdf
 presentation.pdf
+handout.pdf
 *-converted-to.*
 # these rules might exclude image files for figures etc.
 # *.ps
